Adjusted multiple generic div tags and replaced them with semantic elements. fixed html code whitespace

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,17 +22,17 @@ header h1 {
 header h1 .seo {
     color: #d9dcd6;
 }
-header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-header div ul {
+header nav ul {
     list-style-type: none;
 }
-header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -111,14 +111,14 @@ p {
     max-width: 150px;
 }
 
-
-.footer {
+/* footer tag */
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
